# MyTodo

./: .clang-format  .gitignore  .qmlls.ini  CMakeLists.txt  LICENSE  MyTodo.qmlproject  TODO.md  check_quality.bat  main.cpp  run_tests.bat  version.in
cmake/: SQLite3.cmake  nlohmann_json.cmake  stduuid.cmake  tomlplusplus.cmake
cmake/version/: version.cmake  version.h.in
cpp/: category_manager.cpp  category_manager.h  config.cpp  config.h  default_value.h  global_state.cpp  global_state.h  logger.cpp  logger.h  mainWindow.cpp  mainWindow.h  main_window.cpp  main_window.h  network_manager.cpp  network_manager.h  networkmanager.cpp  networkmanager.h  setting.cpp  setting.h  settings.cpp  settings.h  todo_data_storage.cpp  todo_data_storage.h  todo_filter.cpp  todo_manager.cpp  todo_manager.h  todo_model.cpp  todo_model.h  todo_sorter.cpp  todo_sorter.h  todo_sync_server.cpp  todo_sync_server.h  todoitem.cpp  todoitem.h  todomodel.cpp  todomodel.h  user_auth.cpp  user_auth.h
cpp/app/: CMakeLists.txt  category_manager.cpp  category_manager.h  global_state.cpp  global_state.h  qml_category.cpp  qml_category.h  qml_global_data.cpp  qml_global_data.h  qml_holiday.cpp  qml_holiday.h  qml_setting.cpp  qml_setting.h  qml_todo.cpp  qml_todo.h  qml_update_checker.cpp  qml_update_checker.h  qml_user_auth.cpp  qml_user_auth.h  setting.cpp  setting.h  setting_manager.cpp  setting_manager.h  todo_manager.cpp  todo_manager.h  user_auth.cpp  user_auth.h  user_auth_manager.cpp  user_auth_manager.h
cpp/domain/: CMakeLists.txt  base_data_storage.cpp  base_data_storage.h  base_sync_server.cpp  base_sync_server.h
cpp/domain_base/: CMakeLists.txt  base_data_storage.h  base_sync_server.cpp  base_sync_server.h
cpp/foundation/: CMakeLists.txt  QtDebug.cpp  QtDebug.h  config.cpp  config.h  database.cpp  database.h  database_manager.cpp  database_manager.h  default_value.h  global_data.cpp  global_data.h  logger.cpp  logger.h  network_manager.cpp  network_manager.h  network_proxy.cpp  network_proxy.h  network_request.cpp  network_request.h  qt_debug.cpp  qt_debug.h  utility.cpp  utility.h
cpp/foundation/database/: CMakeLists.txt  database.cpp  database.h  sql_query.cpp  sql_query.h  sql_value.cpp  sql_value.h
cpp/foundation/datetime/: CMakeLists.txt  date.cpp  date.h  datetime.cpp  datetime.h  formatter.cpp  formatter.h  time.cpp  time.h  time.hpp  timezone.cpp  timezone.h
cpp/foundation/logger/: CMakeLists.txt  log_stream.h  logger.cpp  logger.h
cpp/items/: categorie_item.cpp  categorie_item.h  todo_item.cpp  todo_item.h
cpp/modules/backup/: CMakeLists.txt  backup_manager.cpp  backup_manager.h
cpp/modules/category/: CMakeLists.txt  category_data_storage.cpp  category_data_storage.h  category_item.cpp  category_item.h  category_model.cpp  category_model.h  category_sync_server.cpp  category_sync_server.h
cpp/modules/holiday/: CMakeLists.txt  holiday_item.cpp  holiday_item.h  holiday_manager.cpp  holiday_manager.h
cpp/modules/setting/: CMakeLists.txt  setting.cpp  setting.h
cpp/modules/todo/: CMakeLists.txt  todo_data_storage.cpp  todo_data_storage.h  todo_item.cpp  todo_item.h  todo_model.cpp  todo_model.h  todo_queryer.cpp  todo_queryer.h  todo_sync_server.cpp  todo_sync_server.h
cpp/modules/update_checker/: CMakeLists.txt  version_checker.cpp  version_checker.h
cpp/modules/user/: CMakeLists.txt  user_auth.cpp  user_auth.h
cpp/script/: version.cmake  version.h.in
cpp/todo/: category_manager.cpp  category_manager.h  todo_data_storage.cpp  todo_data_storage.h  todo_filter.cpp  todo_filter.h  todo_manager.cpp  todo_manager.h  todo_sorter.cpp  todo_sorter.h  todo_sync_server.cpp  todo_sync_server.h
cpp/todos/: base_data_storage.cpp  base_data_storage.h  base_sync_server.cpp  base_sync_server.h
cpp/todos/category/: CMakeLists.txt  categorie_item.cpp  categorie_item.h  category_data_storage.cpp  category_data_storage.h  category_manager.cpp  category_manager.h  category_model.cpp  category_model.h  category_sync_server.cpp  category_sync_server.h
cpp/todos/items/: categorie_item.h
cpp/todos/todo/: CMakeLists.txt  todo_data_storage.cpp  todo_data_storage.h  todo_filter.h  todo_item.cpp  todo_item.h  todo_manager.cpp  todo_manager.h  todo_model.cpp  todo_model.h  todo_queryer.cpp  todo_queryer.h  todo_sorter.cpp  todo_sorter.h  todo_sync_server.cpp  todo_sync_server.h
docs/: TODO.md
i18n/: CMakeLists.txt  MyTodo_en.ts  MyTodo_ja.ts  MyTodo_zh_CN.ts  i18n_languages.h.in
qml/: CMakeLists.txt  HomePage.qml  Main.qml  MainPage.qml  Setting.qml  SettingPage.qml  WidgetMode.qml
qml/components/: BaseDialog.qml  CategoryManagementDialog.qml  ClickBlocker.qml  ConfirmDialog.qml  ControlRow.qml  CustomButton.qml  CustomCheckBox.qml  CustomComboBox.qml  CustomPopup.qml  CustomSpinBox.qml  CustomSwitch.qml  CustomTextEdit.qml  CustomTextInput.qml  DatePicker.qml  DateTimePicker.qml  Divider.qml  IconButton.qml  InputDialog.qml  LoginDialog.qml  LoginStatusDialogs.qml  MainBackground.qml  MessageDialog.qml  ModalDialog.qml  RecurrenceSelector.qml  SwitchRow.qml  TaskForm.qml  ThemeManager.qml  TitleBar.qml  TodoCategoryManager.qml  TodoDetailsDialog.qml  TodoListContainer.qml  WindowDragHandler.qml  WindowResizeHandler.qml
qml/todo/: TodoCategoryManager.qml
qml/todos/: TodoCategoryManager.qml  TodoListContainer.qml
tests/: CMakeLists.txt  test_networkmanager.cpp  test_todoitem.cpp  test_todomodel.cpp
tools/: check_headers.py
tools/check_headers/: HeaderCheck.cmake  check_headers.py
tools/处理Qt的TS翻译脚本/: Qt_TS文件处理脚本.py  README.md
tools/文件日期查询/: Git 文件日期查询工具.py
tools/检查文件头/: check_headers.cmake  check_headers.py
